k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: front-back-node-vite-react-typescript-tailwind-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000 # Matches Dockerfile EXPOSE
