k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000 # Exposes port 3000 on the cluster
    targetPort: 5000 # Matches the containerPort
  type: ClusterIP
